--- a/Project.html
+++ b/Project.html
@@ -15110,7 +15110,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Project:-Sentiment-Analysis-for-Social-Media-Data">Project: Sentiment Analysis for Social Media Data<a class="anchor-link" href="#Project:-Sentiment-Analysis-for-Social-Media-Data">&#182;</a></h2><h3 id="By:-Arsalan,-Akash-and-Aashi">By: Arsalan, Akash and Aashi<a class="anchor-link" href="#By:-Arsalan,-Akash-and-Aashi">&#182;</a></h3>
+<h2 id="Project:-Sentiment-Analysis-for-Social-Media-Data">Sentiment Analysis for Social Media Data<a class="anchor-link" href="#Project:-Sentiment-Analysis-for-Social-Media-Data">&#182;</a></h2><h3 id="By:-Arsalan,-Akash-and-Aashi">Aashi Aggarwal<a class="anchor-link" href="#By:-Arsalan,-Akash-and-Aashi">&#182;</a></h3>
 </div>
 </div>
 </div>
